	- Fixed decision to integrate Portugal for Spain, now Spain will get cores on every Portugal territory, not only some
	- Fixed broken requests 30% influence in SCO in Chinese focus An Alliance to Rival NATO
	- Now player don't should see EU decisions if EU disabled due to the game rules
	- Fixed 0% influence in some countries
	- Fixed Abdelaziz Bouteflika death in 2004

Content:
	- New Tags: SPA, TLS
	- Majors are now at the top of the list of game rules
	- Nationalist Germany now can claim Liechtenstein
	- Added initial missile stockpile to ITA
	- Added initial missile stockpile to SPR
	- Rebalance and restyling of the italian Mafia system
	- Added new branches to the Italian focus tree: City of Rome, Church Relations, Media
	- Added Technocratic governments to Italy with unique mechanics
	- Complete rework of the Italian territorial claims, military and diplomatic branches of the focus tree
	- Rebalance of Italian officer corps (nerfed, but improvable through new military focuses)
	- Italian leaders no longer change upon losing elections, they can instead be replaced in a dedicated branch
	- Added several new italian parties unlockable with leaders change focuses
	- Rework of the italian policy system to be based on decisions that can be enacted and repealed infinitely
	- Given access to policies to non-democratic italian paths, added democratic senate path and reworked overall branch
	- Minor rework and additions to Italian Education, Debt, Administration and Industry branches
	- Added several new options for integrative restoration across the whole mediterranean
	- Updated romanization decisions with new states and added decisions for previously missing roman provinces
	- Added rewards for completing all integrative restoration and all romanization decisions
	- Rewrote calculations for italian reform expectance party drift and rebalanced various other effects
	- Updated starting stockpile for Italy
	- Restructured Brazil and Vietnam Navy