@@ -2288,6 +2288,16 @@ on_actions = {
 		}
 	}
 
+	on_monthly_DRC = {
+		effect = {
+			DRC = {
+				if = { limit = { check_variable = { global.year = 2001 } check_variable = { global.month = 1 } NOT = { is_in_array = { ruling_party = 18 } } }
+					country_event = { id = DRC.0 days = 19 }
+				}
+			}
+		}
+	}
+
 	on_yearly_ARM = {
 		effect = {
 			if = {
