@@ -19,4 +19,23 @@ set_leader_DRC = {
 			if = { limit = { date < 2016.1.2 } set_temp_variable = { b = 1 } } #skip if 2017
 		}
 	}
+	else_if = { limit = { has_country_flag = set_neutral_Social }
+		if = { limit = { check_variable = { neutral_Social_leader = 0 } }
+			add_to_variable = { neutral_Social_leader = 1 }
+			hidden_effect = { kill_country_leader = yes }
+
+			create_country_leader = {
+				name = "Joseph Kabila Kabange"
+				picture = "Joseph_Kabila.dds"
+				ideology = neutral_Social
+				traits = {
+					neutrality_neutral_Social
+					guerrilla_leader
+				}
+			}
+
+			if = { limit = { has_country_flag = do_not_retire } subtract_from_variable = { neutral_Social_leader = 1 } }
+			set_temp_variable = { b = 1 }
+		}
+	}
 }
