@@ -11879,6 +11879,7 @@ defined_text = {
 	text = { trigger = { original_tag = DEN } localization_key = DEN.neutral_Social }
 	text = { trigger = { original_tag = DJI } localization_key = DJI.neutral_Social }
 	text = { trigger = { original_tag = DOM } localization_key = DOM.neutral_Social }
+	text = { trigger = { original_tag = DRC has_country_flag = DRC_kabila_dead } localization_key = DRC.neutral_Social }
 	text = { trigger = { original_tag = ECU } localization_key = ECU.neutral_Social }
 	text = { trigger = { original_tag = EGY } localization_key = EGY.neutral_Social }
 	text = { trigger = { original_tag = ELS } localization_key = ELS.neutral_Social }
