@@ -1,0 +1,29 @@
+# AUTHOR(S): DREAD
+add_namespace = DRC
+
+country_event = { #KABILA ASSASSINATION
+	id = DRC.0
+	title = DRC.0.t
+	desc = DRC.0.d
+	picture = GFX_african_demonstration
+
+	is_triggered_only = yes
+
+	option = {
+		name = DRC.0.A
+		log = "[GetDateText]: [This.GetName]: DRC.0.A executed"
+		set_country_flag = DRC_kabila_dead
+		if = { limit = { NOT = { is_in_array = { ruling_party = 18 } } }
+			set_temp_variable = { rul_party_temp = 18 }
+			change_ruling_party_effect = yes
+			set_politics = {
+				ruling_party = neutrality
+				elections_allowed = yes
+			}
+		}
+		set_temp_variable = { party_index = 18 }
+		set_temp_variable = { party_popularity_increase = 0.40 }
+		set_temp_variable = { temp_outlook_increase = 0.40 }
+		add_relative_party_popularity = yes
+	}
+}
