@@ -2902,6 +2902,8 @@
  DOM.Nat_Populism_desc: ""
  DRC.anarchist_communism: "£generic_anarchist_communism_small Alliance of Democratic Forces for the Liberation of Congo-Zaire"
  DRC.anarchist_communism_desc: ""
+ DRC.neutral_Social: "£generic_neutral_Social_small Parti du Peuple pour la Reconstruction et la Démocratie (PPRD)"
+ DRC.neutral_Social_desc: ""
  DRC.Monarchist: "£generic_Monarchist_small House of Kilukeni"
  DRC.Monarchist_desc: ""
  ECU.conservatism: "£generic_conservatism_small Democracia Popular (DP)"
