@@ -1905,6 +1905,11 @@
  AngolaNews.1.UNI.d: "The Angolan civil war has come to an end. Raging since the 1970s, the conflict was fought between two former independence fighting allies, the MPLA and UNITA.\n\nUNITA, supported by the United States, has managed to overcome and defeat MPLA."
  AngolaNews.1.a: "Interesting"
 
+ # DRC
+ DRC.0.t: "Laurent-Désiré Kabila Assassinated!"
+ DRC.0.d: "Our leader and liberator Laurent-Désiré was attacked today in the presidential palace, his bad standing with the military and attempts to purge disloyal Kadogos have evidently met with a terrible failure, we attempted to rush him to Harare for urgent medical care, but it was too late, our liberator lays dead.\n\nWe have since found and had the perpetrator Rashidi Kasereka executed for his crimes."
+ DRC.0.A: "A Dark Day."
+
  ### PKK EVENTS ###
  #Test ones are to be removed prior to the release
 
