@@ -94,6 +94,7 @@ Bugfixes:
 	- Now player don't should see EU decisions if EU disabled due to the game rules
 	- Fixed 0% influence in some countries
 	- Fixed Abdelaziz Bouteflika death in 2004
+	- Fixed Kabila's death in 2001
 
 Content:
 	- New Tags: SPA, TLS
